# reuss

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  benchmark_sum.cpp  demo.cpp  em_virtual.config  g2recv.cpp  imshow.cpp  sender.cpp  srecv.cpp  take_pd.cpp  urecv.cpp  urecv2.cpp
cmake/: clang-format.cmake
components/: CMakeLists.txt
components/include/reuss/: FrameAccumulator.h  FrameSummer.h  Gotthard2Receiver.h  StreamingReceiver.h  SummingReceiver.h  pedestal.h
components/src/: Gotthard2Receiver.cpp  Gotthard2Receiver.test.cpp  StreamingReceiver.cpp  SummingReceiver.cpp
conda-recepie/: build.sh  meta.yaml
core/: CMakeLists.txt
core/include/reuss/: CollectingStreamer.h  FrameAssembler.h  FrameSummer.h  G2Receiver.h  G2UdpReceiver.h  ImageFifo.h  ImageView.h  Receiver.h  ScalarImage.h  SimpleQueue.h  StaticString.h  Streamer.h  StreamingReceiver.h  UdpSocket.h  Writer.h  ZmqReceiver.h  ZmqSocket.h  ZmqWriter.h  project_defs.h  utils.h
core/src/: CollectingStreamer.cpp  DirectWriter.cpp  DirectWriter.h  File.h  FwriteWriter.cpp  FwriteWriter.h  G2Receiver.cpp  G2Receiver.test.cpp  G2UdpReceiver.cpp  G2UdpReceiver.test.cpp  ImageFifo.cpp  ImageFifo.test.cpp  RawFile.h  Receiver.cpp  RxMemory.h  SimpleQueue.test.cpp  StaticString.test.cpp  Streamer.cpp  UdpSocket.cpp  UdpSocket.h  UdpSocket.test.cpp  Writer.cpp  Writer.h  ZmqReceiver.cpp  ZmqSocket.cpp  ZmqWriter.cpp  utils.cpp
detector/: CMakeLists.txt
detector/include/reuss/: DetectorInterface.h  DummyDetector.h  JungfrauDetector.h
detector/src/: DummyDetector.cpp  JungfrauDetector.cpp
docs/: 01-Gotthard2.md
gui/: CMakeLists.txt
gui/app/: reuss_gui.cpp  reuss_gui_opengl.cpp
gui/resources/: resources.qrc
gui/src/: ImagePlot.cpp  ImagePlot.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  table.cpp  table.h
interface/: CMakeLists.txt
interface/include/reuss/: DetectorInterface.h  DummyDetector.h  FrameAccumulator.h  JungfrauDetector.h  Pedestal.h  StreamingReceiver.h  pedestal.h
interface/src/: DummyDetector.cpp  JungfrauDetector.cpp  Pedestal.cpp  StreamingReceiver.cpp
math/: CMakeLists.txt
math/include/reuss/: DataSpan.h  DataType.h  ImageData.h  NumpyFileHeader.h  conversion_helper.h  file_io.h
math/src/: DataSpan.test.cpp  DataType.test.cpp  ImageData.test.cpp  NumpyFileHeader.test.cpp  file_io.cpp  file_io.test.cpp
python/: CMakeLists.txt
python/app/: acquire  cbf_writer  collect_pd  collect_raw_pd  g2panel  g2panel.ui  g2recv  play.py  read_stream.py  replay.py  srecv  stream_reader  stream_viewer  viewer  writer  zmq_recv
python/reuss/: DataCollector.py  DummyDetector.py  Hdf5File.py  PreviewReceiver.py  PyZmqReceiver.py  StreamWriter.py  ZmqWriter.py  __init__.py  calibration.py  config.py  formatting.py  io.py  overlay.py  print_config.py  receiver.py  reussrc.in  shm.py  tools.py  validation.py
python/scripts/: cbf_to_hdf5.py  convert.py  convert_data.py  copy_tiff.py  np_to_tiff.py  raw_pedestal.py  show.py
python/src/: apply_calibration.h  calibration.cpp  frameacc.cpp  g2receiver.cpp  interface.cpp  main.cpp  np_to_image.h  pedestal.cpp  span_helpers.h  streaming_receiver.cpp  utils.cpp  utils.h  utils.test.cpp  zmqwriter.cpp
python/tests/: channel_mask.txt  test_load_channel_mask.py
tests/: CMakeLists.txt
